# neodyme

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.coverage
.github/workflows/: hugo.yml
alembic/: env.py
book/: chapter_10_neodyme.md  chapter_11_neodyme.md  chapter_12_neodyme.md  chapter_1_neodyme.md  chapter_2_neodyme.md  chapter_3_neodyme.md  chapter_4_neodyme.md  chapter_5_neodyme.md  chapter_6_neodyme.md  chapter_7_neodyme.md  chapter_8_neodyme.md  chapter_9_neodyme.md  hugo.toml  toc_neodyme.md
book/content/: _index.md
book/content/docs/: _index.md  chapter-1.md  chapter-10.md  chapter-11.md  chapter-12.md  chapter-2.md  chapter-3.md  chapter-4.md  chapter-5.md  chapter-6.md  chapter-7.md  chapter-8.md  chapter-9.md
book/public/: 404.html  en.search-data.min.205c1ed7fa4256ac682dcc09f3df2ef00668f3db20cb12900ba97f44cbeb9512.json  en.search-data.min.55cbf40109877b8484574b3248b38d7c6d125b94f1cb60bc6d848c33ac7ef363.json  en.search-data.min.8a30e93fdc514712ee125bdb0e1343e1e9b607c4fe88287871e939d4a0fd2b1f.json  en.search-data.min.8e51777aa19249afed76186944f1883f70bbe873a67a6be0e3466ab144ab7559.json  en.search.min.04d5bcdbbecca89239ba280801e173492bd5eb5605da624b9b4f15f0fa6262f2.js  en.search.min.9726ea1c28841eefeac987196088c6e49c015a9ce33e32ae3903bd2d95f00e0e.js  en.search.min.c191579c4ae9a5777c9028306b9f9b99858fbbdd14be140a47e77b633882b215.js  en.search.min.f64f4d2b3193917ebd07e82190bf6e6a2f23d6e670fb678260875bd442e5cf4d.js  index.html  index.xml  manifest.json  sitemap.xml
book/public/categories/: index.html  index.xml
book/public/docs/: index.html  index.xml
book/public/docs/chapter-1/: index.html
book/public/docs/chapter-10/: index.html
book/public/docs/chapter-11/: index.html
book/public/docs/chapter-12/: index.html
book/public/docs/chapter-2/: index.html
book/public/docs/chapter-3/: index.html
book/public/tags/: index.html  index.xml
src/neodyme/: main.py
src/neodyme/core/: config.py  database.py  exceptions.py
src/neodyme/models/: __init__.py  base.py  user.py
src/neodyme/repositories/: __init__.py  base.py  user.py
src/neodyme/routes/: users.py
tests/: conftest.py  test_database.py  test_routes_specific.py  test_users.py
(+6 files in other folders)
